# qbittorent_tracker_bulk

./: .env  .gitignore  README.md  README.rst  build  pyproject.toml
qbittorent_tracker_bulk/: __init__.py  __main__.py  run.py
qbittorent_tracker_bulk/lib/: loop_clients.py  qbittorrent.py  trackers_list.py
tests/: test_qbittorent_tracker_bulk.py
