[tool.poetry]
name = "qbittorent_tracker_bulk"
version = "0.1.0"
description = "Bulk add trackers to each torrent using a remote qbittorrent client"
authors = ["Brandon White <koggars@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
