[tool.poetry]
name = "qbittorent_tracker_bulk"
version = "0.1.0"
description = "Bulk add trackers to each torrent using a remote qbittorrent client"
authors = ["Brandon White <koggars@gmail.com>"]

[tool.poetry.scripts]
jira_cli = "qbittorent_tracker_bulk.run:cli"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
qbittorrent-api = "^2022.10.39"
requests = "^2.28.1"
click = "^8.1.3"
qbittorrent = "^0.1.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
